# vectorlite

./: .buildinfo  .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  bootstrap_vcpkg.py  build.sh  build_release.sh  extract_wheels.sh  format.sh  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.py  test.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/markdown/: api.doctree  getting-started.doctree  news.doctree  overview.doctree
.github/workflows/: arm64.yml  build-wheel.yml  ci.yml  doc.yml  upload-wheel.yml
_sources/: index.rst.txt
_sources/markdown/: api.md.txt  news.md.txt  overview.md.txt
benchmark/: README.md  benchmark.py  conftest.py  plot.py  requirements-extra.txt  requirements.txt  test_benchmark.py
bindings/nodejs/: package.json.tpl
bindings/python/vectorlite_py/: __init__.py
bindings/python/vectorlite_py/test/: conftest.py  helpers.py  test_ddl_options.py  test_dml.py  test_knn_query.py  test_persistence.py  test_scalar_functions.py  test_vector_roundtrip.py  vectorlite_test.py
doc/: conf.py  index.rst
doc/markdown/: another-feature.md  api.md  getting-started.md  some-feature.md
docs/superpowers/plans/: 2026-06-14-explicit-index-persistence.md  2026-06-14-index-registry-survive-reparse.md  2026-06-22-python-integration-regression-suite.md
docs/superpowers/specs/: 2026-03-22-async-compact-rebuild-design.md  2026-06-14-explicit-index-persistence-design.md  2026-06-14-index-registry-survive-reparse-design.md  2026-06-22-python-integration-regression-suite-design.md
examples/: README.md  hnsw_param.py  index_serde.py  knn_search.py  metadata_filter.py  quickstart.py  requirements.txt
examples/typescript/: index.ts  test.ts  vectorlite.d.ts
integration_test/: CMakeLists.txt  delete_test.cpp
integration_test/python/test/: vectorlite_test.py
markdown/: api.html  getting-started.html  news.html  overview.html
media/: bench_result_20000_vectors  bench_result_3000_vectors
rust/: .gitignore  Cargo.toml  README.md  bench_compare.py  build.ps1  build.rs  build.sh
rust/cpp/: core_shim.cpp  core_shim.h
rust/src/: core.rs  ffi.rs  hnsw.rs  index_options.rs  lib.rs  ops.rs  registry.rs  scalar.rs  vector.rs  vector_space.rs  virtual_table.rs
rust/vectorlite-sqlite-sys/: Cargo.toml  build.rs
rust/vectorlite-sqlite-sys/src/: bindings.rs  lib.rs
scripts/: bump_version.py  check_version.py
src/: constraint.cpp  constraint.h  index_options.cpp  index_options.h  index_options_test.cpp  macros.h  sqlite_functions.cpp  sqlite_functions.h  sqlite_hnsw.cpp  sqlite_vector.cpp  util.cpp  util.h  util_test.cpp  vector.cpp  vector.h  vector_space.cpp  vector_space.h  vector_space_test.cpp  vector_test.cpp  vector_view.cpp  vector_view.h  vector_vtab.cpp  vector_vtab.h  vectorlite.cpp  version.h.in  virtual_table.cpp  virtual_table.h
src/ops/: CMakeLists.txt  distance.cpp  distance.h  distance_benchmark.cpp  distance_test.cpp  ops.cpp  ops.h  ops_benchmark.cpp  ops_test.cpp
vectorlite/: CMakeLists.txt  constraint.cpp  constraint.h  distance.h  index_options.cpp  index_options_test.cpp  index_registry.cpp  index_registry.h  index_registry_test.cpp  macros.h  quantization.cpp  quantization.h  sqlite_functions.cpp  sqlite_functions.h  util.h  vector.h  vector_space.cpp  vector_space.h  vector_space_test.cpp  vector_test.cpp  vector_view.h  vector_view_test.cpp  vectorlite.cpp  virtual_table.cpp  virtual_table.h
vectorlite/ops/: CMakeLists.txt  README.md  ops.cpp  ops.h  ops_benchmark.cpp  ops_test.cpp
vectorlite_py/: __init__.py  test
