[build-system]
requires = ["scikit-build-core>=0.8.0", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "vectorlite_py"
version = "0.2.0"
description = "Fast vector search for sqlite3"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Yefu Wang", email = "1yefuwang1@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/1yefuwang1/vectorlite"
Repository = "https://github.com/1yefuwang1/vectorlite"

[tool.scikit-build]
# Specify where the Python package is located
wheel.packages = ["bindings/python/vectorlite_py"]
# Minimum version of CMake
cmake.minimum-version = "3.22"
# Build configuration
cmake.build-type = "Release"
# Use Ninja generator and vcpkg toolchain
cmake.args = [
    "-G", "Ninja",
    "-DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake"
]
# Set wheel platform tags (py3-none-{platform})
wheel.py-api = "py3"

[tool.scikit-build.cmake.define]
# These will be passed to CMake as -D flags
SKBUILD = "1"
CMAKE_BUILD_TYPE = "Release"

[tool.cibuildwheel]
test-requires = ["pytest", "numpy", "apsw>=3.46"]
# --import-mode=importlib forces pytest to use installed packages instead of the local source code
test-command = "pytest --import-mode=importlib {project}/bindings/python/vectorlite_py/test"
skip = ["*-win32", "*-win_arm64", "*-manylinux_i686", "*musllinux*", "pp*", "cp39*", "cp310*", "cp311*", "cp312*", "cp313*"]

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET = "10.15"} # 10.15 is the minimum version that fully supports c++17

# todo: support musllinux
[tool.cibuildwheel.linux]
before-build = "yum install -y ninja-build"