[package]
name = "vectorlite"
version = "0.3.0"
edition = "2021"
description = "Rust port of the vectorlite SQLite extension virtual table"
license = "Apache-2.0"

[lib]
name = "vectorlite"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
vectorlite-sqlite-sys = { path = "vectorlite-sqlite-sys" }

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3

[workspace]
members = ["vectorlite-sqlite-sys"]
